<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <TextView
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textSize="20dp"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:layout_height="wrap_content"
        android:text="@string/about"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:textSize="18dp"
        android:text="@string/about_3"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:textSize="18dp"
        android:text="@string/about_4"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:textSize="18dp"
        android:text="@string/about_1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:textSize="18dp"
        android:text="@string/about_2"/>

</LinearLayout>
