<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:layout_marginLeft="30dp"
        android:textSize="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/name_1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:gravity="center"
        android:textSize="24dp"
        android:textColor="@color/colorAccent"
        android:text="@string/name_2"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:maxLength="20"
        android:textSize="28dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="50dp"
        android:id="@+id/userName"
        />

    <Button
        android:id="@+id/btn_get"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:layout_margin="30dp"
        android:textSize="30dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorAccent"
        android:text="@string/name_4"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:gravity="center"
        android:visibility="gone"
        android:textSize="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/about_2"/>



</LinearLayout>
